Update User Time Off